# fast_api_celery

./: README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: b815cfd2871e_.py  c3d4e2c614ce_.py
app/: __init__.py  celery_utils.py  config.py  database.py
app/users/: __init__.py  models.py  tasks.py  views.py
app/users/templates/: form.html
app/ws/: views.py
celery_project/: __init__.py  celery_utils.py  database.py  main.py
celery_project/users/: __init__.py  models.py
compose/local/fastapi/: Dockerfile  entrypoint  requirements.txt  start
compose/local/fastapi/celery/beat/: start
compose/local/fastapi/celery/flower/: start
compose/local/fastapi/celery/worker/: start
tests/: conftest.py  test_view.py
