[tool.poetry]
name = "celery-project"
version = "0.1.0"
description = ""
authors = ["kiran <kirannadimpalli2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi ="^0.108.0"
uvicorn ="^0.25.0"
celery="5.3.6"
redis="^5.0.1"
flower="^2.0.1"
SQLAlchemy="2.0.25"
alembic="1.13.1"
psycopg2-binary="2.9.9"
watchfiles="0.21.0"
Jinja2="3.1.2"
requests="2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"